# routes/index.js
@@ -1,5 +1,17 @@
 const express = require("express");
 const router = express.Router();
+const passport = require("passport");
+
+router.get("/login", passport.authenticate("github"), (req, res) => {});
+
+router.get("/logout", function(req, res, next) {
+    req.logout(function(err){
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
+
+
 
 router.get('/', (req, res) => {
     res.send('API for mananaging students and courses.');
